:bug: Fix (Planning): Align items on GameSessionCard, fix -1 value

--- a/src/app/planning/shared-planning/components/game-session-card/game-session-card.component.scss
+++ b/src/app/planning/shared-planning/components/game-session-card/game-session-card.component.scss
@@ -24,6 +24,7 @@
           &__game {
             display: flex;
             align-items: center;
+            width: 300px;
 
             img {
               border-radius: 8px;
